# FPGA_GPTalk

./: .gitignore  README.md  codex.txt
deprecated/old_axi_lite_bringup/scripts/: create_zybo_gemv_hw.tcl  create_zybo_gemv_smoke_hw.tcl
docs/: 00_ACTIVE_KR.md  VIVADO_GUI_KR.md
docs/internal/: hw_dma_architecture.md  hw_route_recovery.md  interface_contract_dma.md
docs/internal/deprecated/: deprecated_axi_lite_data_path.md  hw_bringup_result.md  rtl_next_step.md  (+4 more)
fpga_layout/: mapping_report.txt  tensor_map.json
fpga_layout/q8_0_lane16/: layout_report.txt  manifest.json
hw/vivado_project/: GPTalk.xpr
prompts/: prompt09_freeze_report.md  smollm2_zybo_5day_dma_agent_guide_v4_20260629.md
pycharm/: convert_q8_0_to_fpga_layout.py  generate_golden_from_gguf.py  main.py  requirements.txt
pycharm/golden/: generation_report.txt  manifest.json
pycharm/pc_reference/: generate_golden_from_gguf.py  q8_0_decode_ref.py
pycharm/pc_tools/: __init__.py  convert_q8_0_to_fpga_layout.py  create_tensor_map.py  download_gguf_model.py  env_smoke_test.py  inspect_gguf.py  tokenizer_smoke_test.py
runtime_c/: CMakeLists.txt  gemv_q8_0_ref.c  gemv_q8_0_ref.h  gemv_q8_0_test.c
scripts/: build_gptalk_dma_bitstream.tcl  build_zybo_gemv_dma_bitstream.tcl  create_or_update_gptalk_dma_bd.tcl  create_zybo_gemv_dma_hw.tcl  report_failed_impl.tcl  run_gemv_sim.tcl
vivado_ip/rtl/: gemv_q8_0_ctrl_axi_lite.v  gemv_q8_0_dma_top.v  gemv_q8_0_stream_core.v
vivado_ip/scripts/: add_gemv_q8_0_stream_core_to_gptalk.tcl
vivado_ip/tb/: tb_gemv_q8_0_stream_core.sv  tb_gemv_q8_0_stream_core.v
(+22 files in other folders)
